게시판 조건 별 검색, 리뷰 CRUD, 좋아요 CRUD 기능 구현, 상황과 관계에 따른 예외처리